major updates to code, imgs / created mobile nav

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,8 @@
         </svg>
       </a>
 
-      <ul class="navbar__links">
+      <ul class="navbar__links" data-visible="false">
+        <li class="navbar__overlay"></li>
         <li class="dropdown">
           <span class="dropdown__title">Products
             <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -108,15 +109,18 @@
         </svg>
       </a>
 
-      <a href="home.html" class="navbar__hamburger">
-        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M18 9H4" />
-          <path d="M18 13H4" />
-        </svg>
-      </a>
+      <button class="navbar__hamburger" aria-controls="navbar__links" aria-expanded="false" href="home.html">
+        <span class="sr-only">Menu</span>
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+      </button>
     </nav>
 
-    <section class="hero flex jc-sb">
+  </header>
+
+  <main class="main">
+
+    <section class="hero container flex jc-sb">
       <div class="hero__text flex flex-col gap--lg">
         <h1>
           Contact <emphasis class="text--blue">Sales</emphasis>
@@ -134,76 +138,68 @@
       </div>
     </section>
 
-  </header>
+    <section class="form container">
 
-  <main class="main container">
-
-    <form action="">
-
-      <div class="fieldset flex flex-col">
-        <label class="fieldset__label" for="text-input">First Name</label>
-        <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="John">
-      </div>
-      <div class="fieldset flex flex-col">
-        <label class="fieldset__label" for="text-input">Last Name</label>
-        <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="Doe">
-      </div>
-
-      <div class="fieldset flex flex-col">
-        <label class="fieldset__label" for="text-input">Email</label>
-        <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="johndoe@example.com">
-      </div>
-      <div class="fieldset flex flex-col">
-        <label class="fieldset__label" for="number-input">Phone</label>
-        <input class="fieldset__text" type="number" id="number-input" name="contact" placeholder="+5 (555) 555 5555">
-      </div>
-
-      <div class="fieldset flex flex-col">
-        <label class="fieldset__label" for="text-input">Company</label>
-        <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="Digital Shovel">
-      </div>
-      <div class="fieldset flex flex-col">
-        <label class="fieldset__label" for="dropdown-input">Country</label>
-        <select class="fieldset__select" id="dropdown-input" name="dropdown-input">
-          <option value="">Canada</option>
-          <option value="">USA</option>
-        </select>
-      </div>
-
-      <div class="fieldset fieldset__full-width flex flex-col">
-        <label class="fieldset__label">Purpose of Contact</label>
-        <div class="flex">
-          <input type="radio" name="contact" id="message" value="message">
-          <label class="fieldset__radio fieldset__radio--add-bl-radius" for="message">Message</label>
-          <input type="radio" name="contact" id="order" value="order">
-          <label class="fieldset__radio fieldset__radio--add-border" for="order">Order</label>
-          <input type="radio" name="contact" id="both" value="both">
-          <label class="fieldset__radio fieldset__radio--add-br-radius" for="both">Both</label>
+      <form action="">
+        <div class="fieldset flex flex-col">
+          <label class="fieldset__label" for="text-input">First Name</label>
+          <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="John">
         </div>
-      </div>
+        <div class="fieldset flex flex-col">
+          <label class="fieldset__label" for="text-input">Last Name</label>
+          <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="Doe">
+        </div>
+        <div class="fieldset flex flex-col">
+          <label class="fieldset__label" for="text-input">Email</label>
+          <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="johndoe@example.com">
+        </div>
+        <div class="fieldset flex flex-col">
+          <label class="fieldset__label" for="number-input">Phone</label>
+          <input class="fieldset__text" type="number" id="number-input" name="contact" placeholder="+5 (555) 555 5555">
+        </div>
+        <div class="fieldset flex flex-col">
+          <label class="fieldset__label" for="text-input">Company</label>
+          <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="Digital Shovel">
+        </div>
+        <div class="fieldset flex flex-col">
+          <label class="fieldset__label" for="dropdown-input">Country</label>
+          <select class="fieldset__select" id="dropdown-input" name="dropdown-input">
+            <option value="">Canada</option>
+            <option value="">USA</option>
+          </select>
+        </div>
+        <div class="fieldset fieldset__full-width flex flex-col">
+          <label class="fieldset__label">Purpose of Contact</label>
+          <div class="flex">
+            <input type="radio" name="contact" id="message" value="message">
+            <label class="fieldset__radio fieldset__radio--add-bl-radius" for="message">Message</label>
+            <input type="radio" name="contact" id="order" value="order">
+            <label class="fieldset__radio fieldset__radio--add-border" for="order">Order</label>
+            <input type="radio" name="contact" id="both" value="both">
+            <label class="fieldset__radio fieldset__radio--add-br-radius" for="both">Both</label>
+          </div>
+        </div>
+        <div class="fieldset fieldset__full-width fieldset__order flex flex-col">
+          <label class="fieldset__label" for="text-input">Minipod Order Quantity</label>
+          <input class="fieldset__text" type="number" id="number-input" name="contact" placeholder="2">
+        </div>
+        <div class="fieldset fieldset__full-width fieldset__message flex flex-col">
+          <label class="fieldset__label" for="text-input">Message</label>
+          <textarea class="fieldset__text" type="text" id="text-input" name="contact"
+            placeholder="Tell us more about your project, business needs, and budget."></textarea>
+        </div>
+        <button class="btn btn--primary btn--form" type="submit">Send
+          <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </button>
+      </form>
 
-      <div class="fieldset fieldset__full-width fieldset__order flex flex-col">
-        <label class="fieldset__label" for="text-input">Minipod Order Quantity</label>
-        <input class="fieldset__text" type="number" id="number-input" name="contact" placeholder="2">
-      </div>
-
-      <div class="fieldset fieldset__full-width fieldset__message flex flex-col">
-        <label class="fieldset__label" for="text-input">Message</label>
-        <textarea class="fieldset__text" type="text" id="text-input" name="contact"
-          placeholder="Tell us more about your project, business needs, and budget."></textarea>
-      </div>
-
-      <button class="btn btn--primary btn--form" type="submit">Send
-        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-            stroke-linejoin="round" />
-          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-            stroke-linejoin="round" />
-        </svg>
-      </button>
-
-    </form>
+    </section>
 
   </main>
 
