--- a/team.html
+++ b/team.html
@@ -113,7 +113,11 @@
       </a>
     </nav>
 
-    <section class="hero flex jc-sb">
+  </header>
+
+  <main class="main">
+
+    <section class="hero container flex jc-sb">
       <div class="hero__text flex flex-col gap--lg">
         <h1>
           Meet Our <emphasis class="text--blue">Team</emphasis>
@@ -132,12 +136,7 @@
       </div>
     </section>
 
-  </header>
-
-  <main class="main">
-
     <section class="team container flex jc-sb">
-
       <article class="col-1 flex flex-col gap--xlg">
 
         <h5 class="team__title">Corporate</h5>
@@ -303,7 +302,7 @@
               alt="Headshot Photograph of Noah Chuyu Zhou">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Noah Chuyu Zhou</h6>
-              <small>Electronics Designer</small>
+              <small>Electronics Designer (MEng)</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
           </li>
@@ -313,7 +312,7 @@
               alt="Headshot Photograph of Prasanth Shunmugam">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Prasanth Shunmugam</h6>
-              <small>Manufacturing / Design Engineer</small>
+              <small>Manufacturing / Design Engineer (MEng)</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
           </li>
@@ -342,7 +341,7 @@
               alt="Headshot Photograph of Vahid Mahmoodi">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Vahid Mahmoodi</h6>
-              <small>FEA / CFD Engineer</small>
+              <small>FEA / CFD Engineer (PhD)</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
           </li>
@@ -362,6 +361,26 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Mark Kamukama</h6>
               <small>Mechanical Design Engineer</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Mark Kamukama">
+            <div class="team__list-member-details flex flex-col jc-c">
+              <h6>Parth Patel</h6>
+              <small>Electronics Technologist</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Mark Kamukama">
+            <div class="team__list-member-details flex flex-col jc-c">
+              <h6>Meghal Patel</h6>
+              <small>Mechanical Design Engineer (MS)</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
           </li>
@@ -596,7 +615,6 @@
         </ul>
 
       </article>
-
     </section>
 
     <section class="join-us container">
@@ -651,7 +669,8 @@
     <div class="container footer__container">
       <div class="flex jc-sb">
         <div class="footer__column">
-          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
+          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+              alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
             cost, and high security, we help businesses with managed and unmanaged miner hosting.
