fine tuning to mobile navbar

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
 
   <!-- Javascript -->
   <script defer src="/app/js/contact.js"></script>
+  <script defer src="/app/js/nav-toggle.js"></script>
 
   <title>Digital Shovel - Contact Us</title>
 </head>
@@ -207,7 +208,8 @@
     <div class="container footer__container">
       <div class="flex jc-sb">
         <div class="footer__column">
-          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
+          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+              alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
             cost, and high security, we help businesses with managed and unmanaged miner hosting.
