--- a/faq.html
+++ b/faq.html
@@ -24,6 +24,7 @@
   </noscript>
 
   <!-- Javascript -->
+  <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/faq.js"></script>
 
   <title>Digital Shovel - FAQ</title>
