--- a/merch.html
+++ b/merch.html
@@ -23,6 +23,9 @@
       rel="stylesheet">
   </noscript>
 
+  <!-- JavaScript -->
+  <script defer src="/app/js/nav-toggle.js"></script>
+
   <title>Digital Shovel - Team</title>
 </head>
 
