--- a/faq.html
+++ b/faq.html
@@ -50,7 +50,7 @@
 
       <ul class="navbar__links" data-visible="false">
         <li class="navbar__overlay"></li>
-        <li><a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
+        <li><a href="index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
             <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
               <g>
                 <path fill="var(--primary-color)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -110,7 +110,7 @@
         <li><a class="navbar__link" href="merch.html">Merch</a></li>
         <li><a class="navbar__link" href="faq.html">Faq</a></li>
         <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
-        <li><a href="http://demo.shovel.digital/" target="_blank" class="btn btn--primary">Login
+        <li><a href="http://demo.shovel.digital/" target="_blank" class="btn btn--primary mobile">Login
             <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
