--- a/products-minipod.html
+++ b/products-minipod.html
@@ -623,7 +623,7 @@
                 <td class="text--emphasis">Upon Request</td>
               </tr>
               <tr class="table__row table__row--add-border">
-                <th class="table__heading">cards</th>
+                <th class="table__heading">Features</th>
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
