--- a/products-minipod.html
+++ b/products-minipod.html
@@ -410,7 +410,7 @@
           <li class="card__list-item flex">Exterior and internal IR smart cameras</li>
         </ul>
       </div>
-      <div class="card-7 flex ai-c gap--md">
+      <div class="card-7 card__secondary flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
         <h6>Total Capacity</h6>
         <h6 class="text--blue">300kW</h6>
@@ -424,7 +424,7 @@
             stroke-linejoin="round" />
         </svg>
       </a>
-      <div class="card-9 minipod__set-detail flex ai-c gap--md">
+      <div class="card-9 card__secondary flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6>Approx. Cost</h6>
         <h6 class="text--blue">$39,999 - $40,500</h6>
@@ -433,10 +433,10 @@
 
     <section class="minipod">
       <div class="container flex flex-col gap--md ai-c jc-c">
-        <h2 class="minipod__heading">
+        <h2 class="text__heading">
           <span class="text--blue">Included</span> with your Minipod
         </h2>
-        <p class="minipod__body text--center">
+        <p class="text__body text--center">
           Main container, racking, back-sheets, Smart PDUs,
           4X ventilation fan, ATMS and awning-based intake system.
         </p>
@@ -459,16 +459,16 @@
 
     <section class="sets">
       <div class="container flex flex-col gap--md ai-c">
-        <h2 class="minipod__heading">
+        <h2 class="text__heading">
           Available <span class="text--blue">Configurations</span>
         </h2>
-        <p class="minipod__body text--center">
+        <p class="text__body text--center">
           Our modular design allows Minipods to be customized into a set of units and addons that fit your needs best.
         </p>
         <div class="flex flex-col gap--xlg mtop--xxl">
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img src="images/illustrations/minipod-3set.svg" alt="Minipod 3 Unit Set Illustration">
-            <div class="flex flex-col gap--sm">
+            <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg" alt="Minipod 3 Unit Set Illustration">
+            <div class="flex flex-col gap--sm ai-c">
               <h4>3 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
@@ -489,8 +489,8 @@
           </div>
 
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img src="images/illustrations/minipod-4set.svg" alt="Minipod 4 Unit Set Illustration">
-            <div class="flex flex-col gap--sm">
+            <img class="minipod__set-img" src="images/illustrations/minipod-4set.svg" alt="Minipod 4 Unit Set Illustration">
+            <div class="flex flex-col gap--sm ai-c">
               <h4>4 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
@@ -511,8 +511,8 @@
           </div>
 
           <div class="minipod__set minipod__set-6 gap--lg ai-end jc-c">
-            <img src="images/illustrations/minipod-6set.svg" alt="Minipod 6 Unit Set Illustration">
-            <div class="flex flex-col gap--sm">
+            <img class="minipod__set-img" src="images/illustrations/minipod-6set.svg" alt="Minipod 6 Unit Set Illustration">
+            <div class="flex flex-col gap--sm ai-c">
               <h4>6 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
@@ -533,8 +533,8 @@
           </div>
 
           <div class="minipod__set minipod__set-8 gap--lg ai-end jc-c">
-            <img src="images/illustrations/minipod-8set.svg" alt="Minipod 8 Unit Set Illustration">
-            <div class="flex flex-col gap--sm">
+            <img class="minipod__set-img" src="images/illustrations/minipod-8set.svg" alt="Minipod 8 Unit Set Illustration">
+            <div class="flex flex-col gap--sm ai-c">
               <h4>8 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
@@ -568,10 +568,10 @@
 
     <section class="competitors">
       <div class="container flex flex-col ai-c gap--md">
-        <h2 class="minipod__heading">
+        <h2 class="text__heading flex flex-col-mobile ai-c gap--sm">
           Minipod <span class="text--blue">vs</span> Competitors
         </h2>
-        <p class="minipod__body text--center">
+        <p class="text__body text--center">
           Have a look at where we stand in the market of
           crypto currency mining containers.
         </p>
@@ -826,52 +826,50 @@
 
   </main>
 
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="flex jc-sb">
-        <div class="footer__column">
-          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
-              alt="Digital Shovel Logo" /></a>
-          <p class="footer__body">
-            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
-            cost, and high security, we help businesses with managed and unmanaged miner hosting.
-          </p>
-        </div>
-        <div class="footer__column">
-          <small class="footer__heading">Products</small>
-          <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
-            <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
-          </ul>
-        </div>
-        <div class="footer__column">
-          <small class="footer__heading">Navigation</small>
-          <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="team.html" class="footer__list-item">Team</a></li>
-            <li><a href="merch.html" class="footer__list-item">Merch</a></li>
-            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer__column">
-          <small class="footer__heading">Company</small>
-          <ul class="footer__list">
-            <li><a href="team.html" class="footer__list-item">Careers</a></li>
-          </ul>
-        </div>
+  <footer class="footer container footer__container">
+    <div class="flex flex-col-mobile jc-sb gap--xlg">
+      <div class="footer__column">
+        <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+            alt="Digital Shovel Logo" /></a>
+        <p class="footer__body">
+          Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
+          cost, and high security, we help businesses with managed and unmanaged miner hosting.
+        </p>
       </div>
-      <div class="footer__divider"></div>
-      <div class="flex jc-sb">
-        <div class="flex ai-c gap--sm">
-          <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
-          <small class="footer__copyright">·</small>
-          <small class="footer__copyright">Privacy Policy & Disclaimer</small>
-        </div>
-        <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
-        </div>
+      <div class="footer__column">
+        <small class="footer__heading">Products</small>
+        <ul class="footer__list">
+          <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+          <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <small class="footer__heading">Navigation</small>
+        <ul class="footer__list">
+          <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+          <li><a href="team.html" class="footer__list-item">Team</a></li>
+          <li><a href="merch.html" class="footer__list-item">Merch</a></li>
+          <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+          <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <small class="footer__heading">Company</small>
+        <ul class="footer__list">
+          <li><a href="team.html" class="footer__list-item">Careers</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer__divider"></div>
+    <div class="flex flex-col-mobile jc-sb gap--sm">
+      <div class="flex flex-col-mobile gap--sm">
+        <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
+        <small class="footer__copyright desktop">·</small>
+        <small class="footer__copyright">Privacy Policy & Disclaimer</small>
+      </div>
+      <div class="flex gap--sm ai-c">
+        <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+        <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
       </div>
     </div>
   </footer>
