minor footer fix

--- a/contact.html
+++ b/contact.html
@@ -226,50 +226,52 @@
 
   </main>
 
-  <footer class="footer container footer__container">
-    <div class="flex flex-col-mobile jc-sb gap--xlg">
-      <div class="footer__column">
-        <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
-            alt="Digital Shovel Logo" /></a>
-        <p class="footer__body">
-          Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
-          cost, and high security, we help businesses with managed and unmanaged miner hosting.
-        </p>
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="flex flex-col-mobile jc-sb gap--xlg">
+        <div class="footer__column">
+          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+              alt="Digital Shovel Logo" /></a>
+          <p class="footer__body">
+            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
+            cost, and high security, we help businesses with managed and unmanaged miner hosting.
+          </p>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Products</small>
+          <ul class="footer__list">
+            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Navigation</small>
+          <ul class="footer__list">
+            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <li><a href="merch.html" class="footer__list-item">Merch</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Company</small>
+          <ul class="footer__list">
+            <li><a href="team.html" class="footer__list-item">Careers</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="footer__column">
-        <small class="footer__heading">Products</small>
-        <ul class="footer__list">
-          <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
-          <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
-        </ul>
-      </div>
-      <div class="footer__column">
-        <small class="footer__heading">Navigation</small>
-        <ul class="footer__list">
-          <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-          <li><a href="team.html" class="footer__list-item">Team</a></li>
-          <li><a href="merch.html" class="footer__list-item">Merch</a></li>
-          <li><a href="faq.html" class="footer__list-item">Faq</a></li>
-          <li><a href="contact.html" class="footer__list-item">Contact</a></li>
-        </ul>
-      </div>
-      <div class="footer__column">
-        <small class="footer__heading">Company</small>
-        <ul class="footer__list">
-          <li><a href="team.html" class="footer__list-item">Careers</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer__divider"></div>
-    <div class="flex flex-col-mobile jc-sb gap--sm">
-      <div class="flex flex-col-mobile gap--sm">
-        <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
-        <small class="footer__copyright desktop">·</small>
-        <small class="footer__copyright">Privacy Policy & Disclaimer</small>
-      </div>
-      <div class="flex gap--sm ai-c">
-        <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-        <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+      <div class="footer__divider"></div>
+      <div class="flex flex-col-mobile jc-sb gap--sm">
+        <div class="flex flex-col-mobile gap--sm">
+          <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright desktop">·</small>
+          <small class="footer__copyright">Privacy Policy & Disclaimer</small>
+        </div>
+        <div class="flex gap--sm ai-c">
+          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+        </div>
       </div>
     </div>
   </footer>
