--- a/products-minipod.html
+++ b/products-minipod.html
@@ -478,7 +478,7 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
-                <h6 class="text--blue">Not Included</h6>
+                <h6 class="text--blue">For 4 Set or higher</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
@@ -495,17 +495,17 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
-                <h6 class="text--blue">900kW</h6>
+                <h6 class="text--blue">1.2MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
-                <h6 class="text--blue">Not Included</h6>
+                <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$113,997 - $130,500</h6>
+                <h6 class="text--blue">$167,500 - 190,899</h6>
               </div>
             </div>
           </div>
@@ -517,17 +517,17 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
-                <h6 class="text--blue">900kW</h6>
+                <h6 class="text--blue">1.8MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
-                <h6 class="text--blue">Not Included</h6>
+                <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$113,997 - $130,500</h6>
+                <h6 class="text--blue">$250,500 - 291,999</h6>
               </div>
             </div>
           </div>
@@ -539,17 +539,17 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
-                <h6 class="text--blue">900kW</h6>
+                <h6 class="text--blue">2.4MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
-                <h6 class="text--blue">Not Included</h6>
+                <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$113,997 - $130,500</h6>
+                <h6 class="text--blue">$310,500 - 356,999</h6>
               </div>
             </div>
           </div>
@@ -826,50 +826,52 @@
 
   </main>
 
-  <footer class="footer container footer__container">
-    <div class="flex flex-col-mobile jc-sb gap--xlg">
-      <div class="footer__column">
-        <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
-            alt="Digital Shovel Logo" /></a>
-        <p class="footer__body">
-          Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
-          cost, and high security, we help businesses with managed and unmanaged miner hosting.
-        </p>
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="flex flex-col-mobile jc-sb gap--xlg">
+        <div class="footer__column">
+          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+              alt="Digital Shovel Logo" /></a>
+          <p class="footer__body">
+            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
+            cost, and high security, we help businesses with managed and unmanaged miner hosting.
+          </p>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Products</small>
+          <ul class="footer__list">
+            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Navigation</small>
+          <ul class="footer__list">
+            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <li><a href="merch.html" class="footer__list-item">Merch</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Company</small>
+          <ul class="footer__list">
+            <li><a href="team.html" class="footer__list-item">Careers</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="footer__column">
-        <small class="footer__heading">Products</small>
-        <ul class="footer__list">
-          <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
-          <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
-        </ul>
-      </div>
-      <div class="footer__column">
-        <small class="footer__heading">Navigation</small>
-        <ul class="footer__list">
-          <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-          <li><a href="team.html" class="footer__list-item">Team</a></li>
-          <li><a href="merch.html" class="footer__list-item">Merch</a></li>
-          <li><a href="faq.html" class="footer__list-item">Faq</a></li>
-          <li><a href="contact.html" class="footer__list-item">Contact</a></li>
-        </ul>
-      </div>
-      <div class="footer__column">
-        <small class="footer__heading">Company</small>
-        <ul class="footer__list">
-          <li><a href="team.html" class="footer__list-item">Careers</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer__divider"></div>
-    <div class="flex flex-col-mobile jc-sb gap--sm">
-      <div class="flex flex-col-mobile gap--sm">
-        <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
-        <small class="footer__copyright desktop">·</small>
-        <small class="footer__copyright">Privacy Policy & Disclaimer</small>
-      </div>
-      <div class="flex gap--sm ai-c">
-        <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-        <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+      <div class="footer__divider"></div>
+      <div class="flex flex-col-mobile jc-sb gap--sm">
+        <div class="flex flex-col-mobile gap--sm">
+          <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright desktop">·</small>
+          <small class="footer__copyright">Privacy Policy & Disclaimer</small>
+        </div>
+        <div class="flex gap--sm ai-c">
+          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+        </div>
       </div>
     </div>
   </footer>
