--- a/team.html
+++ b/team.html
@@ -161,7 +161,7 @@
       </div>
     </section>
 
-    <section class="team container flex jc-sb">
+    <section class="team container flex jc-sb gap--sm">
       <article class="col-1 flex flex-col gap--xlg">
 
         <h5 class="team__title">Corporate</h5>
@@ -189,7 +189,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Manesha Persaud</h6>
               <small>Talent Acquisition Coordinator</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">My summer consists of puppies & planes</small>
             </div>
           </li>
 
@@ -198,7 +198,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Kai Jiang</h6>
               <small>Logistics Coordinator</small>
-              <small class="text--blue fadeIn">Infamous manufacturer bully</small>
+              <small class="text--blue fadeIn">I enjoy anything poker-related</small>
             </div>
           </li>
 
@@ -207,7 +207,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Elisha Porras</h6>
               <small>Administrative Assistant</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">I can handle spicy food</small>
             </div>
           </li>
 
@@ -308,7 +308,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Ben de Vos</h6>
               <small>Electronics Designer & Team Leader</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Undisputed Altium God</small>
             </div>
           </li>
 
@@ -318,7 +318,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Hugo Rodrigues</h6>
               <small>Electronics Designer</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Just one more pint of beer</small>
             </div>
           </li>
 
@@ -328,7 +328,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Noah Chuyu Zhou</h6>
               <small>Electronics Designer (MEng)</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Ben is not telling the truth</small>
             </div>
           </li>
 
@@ -338,7 +338,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Prasanth Shunmugam</h6>
               <small>Manufacturing / Design Engineer (MEng)</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Running & travelling make me smarter</small>
             </div>
           </li>
 
@@ -348,7 +348,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Hyeseong Choi</h6>
               <small>Robotics Engineer</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Sparring night every Wed & Fri</small>
             </div>
           </li>
 
@@ -357,7 +357,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Milu Abraham</h6>
               <small>Embedded Systems Engineer</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Car enthusiast and movie buff</small>
             </div>
           </li>
 
@@ -367,7 +367,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Vahid Mahmoodi</h6>
               <small>FEA / CFD Engineer (PhD)</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Never get tired of playing volleyball</small>
             </div>
           </li>
 
@@ -376,7 +376,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Milan Patel</h6>
               <small>Mechanical Design Engineer</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Major cinephile</small>
             </div>
           </li>
 
@@ -386,7 +386,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Mark Kamukama</h6>
               <small>Mechanical Design Engineer</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Football fan, specifically, Liverpool</small>
             </div>
           </li>
 
@@ -396,7 +396,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Parth Patel</h6>
               <small>Electronics Technologist</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Cricket helps me relax</small>
             </div>
           </li>
 
@@ -406,7 +406,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Meghal Patel</h6>
               <small>Mechanical Design Engineer (MS)</small>
-              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+              <small class="text--blue fadeIn">Adulting is soup and I am a fork</small>
             </div>
           </li>
 
@@ -453,7 +453,7 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Nicholas Panayotakos</h6>
               <small>UI / UX Design & Frontend Developer</small>
-              <small class="text--blue fadeIn">This is a front for my tzatziki operation</small>
+              <small class="text--blue fadeIn">Passionate about competitive gaming</small>
             </div>
           </li>
 
