changes to contact and pnp section

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -478,7 +478,7 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
-                <h6 class="text--blue">For 4 Set or higher</h6>
+                <h6 class="text--blue">4 Set or higher</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
