--- a/contact.html
+++ b/contact.html
@@ -211,15 +211,7 @@
           <textarea class="fieldset__text" type="text" id="text-input" name="contact"
             placeholder="Tell us more about your project, business needs, and budget."></textarea>
         </div>
-        <input class="btn btn--primary btn--form" type="submit">Send
-          <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-          </svg>
-        </input>
+        <input class="btn btn--primary btn--form" type="submit">
       </form>
 
     </section>
