--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 
     <section class="form container">
 
-      <form action=”mailto:n.panayotakos@digitalshovel.com” method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
+      <form action=”contact.php” method="post" enctype=”multipart/form-data”>
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="text-input">First Name</label>
           <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="John">
