--- a/contact.html
+++ b/contact.html
@@ -163,30 +163,30 @@
 
     <section class="form container">
 
-      <form action=”contact.php” method="post" enctype=”multipart/form-data”>
+      <form action=”contact.php” method="post" autocomplete="on" enctype=”multipart/form-data”>
         <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="text-input">First Name</label>
-          <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="John">
+          <label class="fieldset__label" for="name-input">First Name</label>
+          <input class="fieldset__text" type="text" id="name-input" name="contact" placeholder="John">
         </div>
         <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="text-input">Last Name</label>
-          <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="Doe">
+          <label class="fieldset__label" for="surname-input">Last Name</label>
+          <input class="fieldset__text" type="text" id="surname-input" name="contact" placeholder="Doe">
         </div>
         <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="text-input">Email</label>
-          <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="johndoe@example.com">
+          <label class="fieldset__label" for="email-input">Email</label>
+          <input class="fieldset__text" type="email" id="email-input" name="contact" placeholder="johndoe@example.com">
         </div>
         <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="number-input">Phone</label>
-          <input class="fieldset__text" type="number" id="number-input" name="contact" placeholder="+5 (555) 555 5555">
+          <label class="fieldset__label" for="phone-input">Phone</label>
+          <input class="fieldset__text" type="tel" id="phone-input" name="contact" placeholder="+5 (555) 555 5555">
         </div>
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="text-input">Company</label>
           <input class="fieldset__text" type="text" id="text-input" name="contact" placeholder="Digital Shovel">
         </div>
         <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="dropdown-input">Country</label>
-          <select class="fieldset__select" id="dropdown-input" name="dropdown-input">
+          <label class="fieldset__label" for="country-input">Country</label>
+          <select class="fieldset__select" id="country-input" name="contact">
             <option value="">Canada</option>
             <option value="">USA</option>
           </select>
@@ -203,12 +203,12 @@
           </div>
         </div>
         <div class="fieldset fieldset__full-width fieldset__order flex flex-col">
-          <label class="fieldset__label" for="text-input">Minipod Order Quantity</label>
-          <input class="fieldset__text" type="number" id="number-input" name="contact" placeholder="2">
+          <label class="fieldset__label" for="order-input">Minipod Order Quantity</label>
+          <input class="fieldset__text" type="number" id="order-input" name="contact" placeholder="2">
         </div>
         <div class="fieldset fieldset__full-width fieldset__message flex flex-col">
-          <label class="fieldset__label" for="text-input">Message</label>
-          <textarea class="fieldset__text" type="text" id="text-input" name="contact"
+          <label class="fieldset__label" for="message-input">Message</label>
+          <textarea class="fieldset__text" type="text" id="message-input" name="contact"
             placeholder="Tell us more about your project, business needs, and budget."></textarea>
         </div>
         <input class="btn btn--primary btn--form" type="submit">
