--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 
     <section class="form container">
 
-      <form action=”contact.php” method="post" autocomplete="on" enctype=”multipart/form-data”>
+      <form action="contact.php" method="post" autocomplete="on" enctype="multipart/form-data">
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="name-input">First Name</label>
           <input class="fieldset__text" type="text" id="name-input" name="contact" placeholder="John">
